--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,3 +19,35 @@ li + li {
 .inner {
   max-width: 700px;
 }
+
+#gesso_nav {
+  max-width: 700px;
+  margin: 10px auto;
+  font-size: 24px;
+}
+
+#gesso_nav ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  justify-content: flex-end;
+}
+
+#gesso_nav li {
+  display: block;
+  margin: 0;
+  padding: 0 20px;
+}
+
+#gesso_nav li + li {
+  border-left: 1px #212121 dotted;
+}
+
+.readme_link {
+  font-variant: small-caps
+}
+
+#main_content.inner {
+  padding-top: 0;
+}
