Fix nav bar links in GH pages template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
      <!-- navigation -->
       <nav id="gesso_nav">
        <ul>
-        <li><a class="readme_link" href="{% link README.md %}">Readme</a></li>
-        <li><a href="{% link docs/README.md %}">Documentation</a></li>
-        <li><a href="{% link examples/README.md %}">Examples</a></li>
+        <li><a class="readme_link" href="{% link purescript-gesso/README.md %}">Readme</a></li>
+        <li><a href="{% link purescript-gesso/docs/README.md %}">Documentation</a></li>
+        <li><a href="{% link purescript-gesso/examples/README.md %}">Examples</a></li>
        </ul>
       </nav>
       
